# project-ml-favorita-sales-forecasting

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: favorita-metadata.md
notebooks/: 01-data-preparation.ipynb  02-exploratory-data-analysis.ipynb  03-model-xgboost.ipynb  04-model-sarima.ipynb  05-model-prophet.ipynb  favorita_s1_sampling.ipynb
