[project]
name = "project-ml-favorita-sales-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy<2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "prophet>=1.2.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
